RESOLVED FIXED167815
When playing inline after fullscreen, set a flag instead of adding attribute plays inline, and use in requiresFullscreenForVideoPlayback.
https://bugs.webkit.org/show_bug.cgi?id=167815
Summary When playing inline after fullscreen, set a flag instead of adding attribute ...
Jeremy Jones
Reported 2017-02-03 14:51:13 PST
!allowsInlineMediaPlayback should override allowsInlineMediaPlaybackAfterFullscreen and prevent inline playback
Attachments
Patch (2.15 KB, patch)
2017-02-03 14:59 PST, Jeremy Jones
eric.carlson: review+
jeremyj-wk: commit-queue-
Patch (9.14 KB, patch)
2017-02-10 15:39 PST, Jeremy Jones
no flags
Patch (9.05 KB, patch)
2017-02-10 15:49 PST, Jeremy Jones
no flags
Archive of layout-test-results from ews126 for ios-simulator-wk2 (14.92 MB, application/zip)
2017-02-10 17:10 PST, Build Bot
no flags
Patch (9.18 KB, patch)
2017-02-13 17:29 PST, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2017-02-03 14:59:49 PST
Jeremy Jones
Comment 2 2017-02-03 15:00:41 PST
Jeremy Jones
Comment 3 2017-02-10 15:39:17 PST
Jeremy Jones
Comment 4 2017-02-10 15:49:11 PST
Build Bot
Comment 5 2017-02-10 17:10:01 PST
Comment on attachment 301207 [details] Patch Attachment 301207 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3065259 New failing tests: media/media-fullscreen-loop-inline.html
Build Bot
Comment 6 2017-02-10 17:10:04 PST
Created attachment 301218 [details] Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Jeremy Jones
Comment 7 2017-02-13 17:29:00 PST
WebKit Commit Bot
Comment 8 2017-02-14 11:35:48 PST
Comment on attachment 301424 [details] Patch Clearing flags on attachment: 301424 Committed r212314: <http://trac.webkit.org/changeset/212314>
WebKit Commit Bot
Comment 9 2017-02-14 11:35:53 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.