When playing inline after fullscreen, set a flag instead of adding attribute plays inline, and use in requiresFullscreenForVideoPlayback. https://bugs.webkit.org/show_bug.cgi?id=167815 rdar://problem/27685077

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-02-14
Reviewed by Jer Noble.

Source/WebCore:

Test: media/media-fullscreen-loop-inline.html

When video is allowed to play inline after fullscreen. Looped video causes play state to update, which can send video back to fullscreen when
allowsInline is false. This change will set a new flag when allowsInlineMediaPlaybackAfterFullscreen allows inline playback that can be tested
in requiresFullscreenForVideoPlayback to prevent sending video back into fullscreen when video loops.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::enterFullscreen):
(WebCore::HTMLMediaElement::exitFullscreen):
* html/HTMLMediaElement.h:
(WebCore::HTMLMediaElement::isTemporarilyAllowingInlinePlaybackAfterFullscreen): Added.
* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::requiresFullscreenForVideoPlayback):

LayoutTests:

Add a new test that tests inline after fullscreen behavior of looping video.

* media/media-fullscreen-loop-inline-expected.txt: Added.
* media/media-fullscreen-loop-inline.html: Added.
* platform/mac-wk2/TestExpectations: Skipped on webkit2.

Canonical link: https://commits.webkit.org/185348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212314 268f45cc-cd09-0410-ab3c-d52691b4dbfc